[tool.poetry]
name = "stories-marshmallow"
version = "0.1.0"
description = "Use marshmallow schemas as stories context contract."
authors = ["Artem Malyshev <proofit404@gmail.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
